# vertere

./: Cargo.toml  LICENSE  README.md  flake.nix
data/applications/: me.ocfox.Vertere.desktop
nix/: package.nix
src/: app.rs  capture.rs  images.rs  lib.rs  main.rs  provider.rs  store.rs  translate.rs  tray.rs  ui.rs  window_state.rs  xdg.rs
